# myhouse

./: .env.dev  .env.prod  .env.prod.db  .gitignore  docker-compose.yml  dump_25_09.psql  pyproject.toml
nginx/: nginx.conf
src/: Dockerfile  Dockerfile.prod  requirements.txt
src/app/: context_proccessors.py  urls.py  views.py
src/app/templates/: about_us.html  base.html  contacts.html  index.html  services.html
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/myhouse_admin/: admin.py  apps.py  models.py  urls.py
src/myhouse_admin/forms/: filter_forms.py  forms.py
src/myhouse_admin/migrations/: 0001_initial.py  0001_squashed_0026_auto_20210925_0220.py  0002_initial.py  0003_auto_20210804_0540.py  0004_auto_20210804_1302.py  0005_aboutuspageadditionalimage.py  0006_auto_20210804_1552.py  0007_auto_20210829_1745.py  0008_auto_20210906_1430.py  0009_alter_personalaccount_flat.py  0010_alter_service_unit.py  0011_auto_20210910_1116.py  0012_personalaccount_summary.py  0013_alter_cashboxrecord_summary.py  0014_auto_20210913_1855.py  0015_alter_cashboxrecord_personal_account.py  0016_meterreading_number.py  0017_alter_meterreading_reading_date.py  0018_alter_meterreading_reading_date.py  0019_auto_20210918_2112.py  0020_alter_receiptservice_receipt.py  0021_remove_personalaccount_summary.py  0022_cashboxrecord_receipt.py
src/myhouse_admin/utils/: db_utils.py  utils.py
src/myhouse_admin/views/: __init__.py  cashbox_views.py  flat_views.py  house_views.py  master_calling_views.py  message_views.py  (+4 more)
src/users/: admin.py  forms.py  models.py  urls.py
(+141 files in other folders)
